# cryptomarket

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  lib.rs  prelude.rs  public_client.rs  rest_client.rs  trading_client.rs  triple_client.rs  type_alias.rs  wallet_client.rs
src/api/: mod.rs  result.rs
src/api/request/: mod.rs
src/api/response/: error.rs  mod.rs
src/api/response/income_methods/: mod.rs  spot_order.rs  spot_trade.rs  transaction.rs
src/api/response/notification/: candle.rs  mod.rs  orderbook.rs  ticker.rs  top_order.rs  trades.rs
src/api/response/result/: amount.rs  balance.rs  fee.rs  mod.rs  subscription.rs
src/api/rest/: mod.rs
src/base_client/: mod.rs  requests.rs  subscriptions.rs
src/client_pool/: mod.rs  pool.rs
